--- a/content.css
+++ b/content.css
@@ -32,3 +32,31 @@
   z-index: 99999999 !important;
   pointer-events: none;
 }
+
+
+#murdoch-mild {
+  position: fixed; 
+
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+
+  background: white;
+
+  z-index: 99999999 !important;
+}
+
+#murdoch-mild-text{
+  color: black;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  font-weight:bold;
+  font-size: 20px;
+  transform-origin: center;
+  transform: translate(-50%,-50%);
+  z-index: 99999999 !important;
+}
