--- a/content.css
+++ b/content.css
@@ -26,7 +26,7 @@
   top: 50%;
   left: 50%;
   font-weight:bold;
-  font-size: 80px;
+  font-size: 80px !important;
   transform-origin: center;
   transform: translate(-50%,-50%) rotate(45deg);
   z-index: 99999999 !important;
@@ -44,19 +44,21 @@
   right: 0;
   bottom: 0;
 
-  background: white;
+  background: white !important;
 
   z-index: 99999999 !important;
 }
 
 #murdoch-mild-text{
-  color: black;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  font-weight:bold;
-  font-size: 20px;
-  transform-origin: center;
+  font-family: sans-serif;
+  color: black !important;
+  position: absolute !important;
+  top: 50% !important;
+  left: 50% !important;
+  font-weight:bold !important;
+  font-size: 2rem;
+  line-height: 1.5;
+  transform-origin: center !important;
   transform: translate(-50%,-50%);
   z-index: 99999999 !important;
 }
